# algohood_strategy

./: .gitignore  README-CN.md  README.md  pyproject.toml
algoAgent/: models.py
algoAgent/algoCrews/: signalFellow.py  signalIdeaTeam.py
algoAgent/algoPrompts/: monoSignalPlanner.md  signalCoder.md
algoAgent/prompts/: features.md  intercept.md  models.md  signals.md  targets.md
algoBroker/: brokerMgr.py
algoConfig/: modelConfig.py  modelConfig.py.sample  redisConfig.py  zmqConfig.py
algoDocs/algoFeatures/: CumulativeOrderFlow_V5.md  MicroLiquidity_V1.md  OrderBookImbalance_V2.md  PriceFluctuation_V2.md  PriceSpreadAnalysis_V1.md  SpinGlassOrderParameter_V1.md  SpreadConvergenceMeasure_V1.md  TopologicalFlowVortex_V1.md  VolatilityExpansionZone_V1.md  VolumeAcceleration_V1.md  VolumeConcentrationIndex_V1.md
algoDocs/algoSignals/: AccumulationSignal.md  AggressiveFlowTrigger.md  BayesianFlowAlpha_V1.md  BollingerBreakout.md  CointegrationZscore_V1.md  DeltaPressureDivergence_V1.md  DeltaZScoreSignal.md  DynamicEMACrossover_V1.md  DynamicEMACrossover_V2.md  EMACrossover.md  EntangleTrapper.md  EntropyAccelerator.md  EntropyAccelerator_v2.md  FluctuationDissipationRatio_V1.md  HFTMomentumSurge_V1.md  HMMStateDetector.md  LiquidityEntropyMonitor_V1.md  LiquidityGapHunter.md  LiquiditySurgeDetector_V1.md  LiquidityWaveRider_V1.md  NinjaShadow.md  OrderFlowImbalanceSignal.md  OrderFlowPressureEvaluator.md  PriceGridSignal_V2.md  SpikeClusterAmplitude_V4.md  VolatilityOutlier.md  (+18 more)
algoStart/: download_task.py  init_redis.py  performance_sample.py  signal_sample.py
(+8 files in other folders)
